Add shortcut icon and set meta tags

--- a/main.html
+++ b/main.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head><title>Мой сайт</title></head>
-<body><a href="https://vk.com/evgesyaa" font size=14>Жека лох</a></body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="keywords" content="Кино, Каталог кино, Каталог фильмов, Фильмы" />
+    <meta name="description" content="Каталог кино" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="icon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <title>Мой сайт</title>
+</head>
+<body>
+
+</body>
 </html>
