--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Каталог кино" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="icon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <title>Мой сайт</title>
+    <title>НАШ сайт</title>
 </head>
 <body>
 
