--- a/main.html
+++ b/main.html
@@ -6,9 +6,12 @@
     <meta name="description" content="Каталог кино" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="icon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <title>Мой сайт</title>
+    <title>Каталог кино</title>
 </head>
 <body>
+    <header>
+        <div id=header>
+    </header>
 
 </body>
 </html>
