Testing backgroud color of header and footer

--- a/main.html
+++ b/main.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Каталог кино" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="icon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <title>НАШ сайт</title>
+    <title>Каталог кино</title>
 </head>
 <body>
     <header>
-        <div id=header>
+        
     </header>
 
 </body>
